test/fail/wasm_variant_eq_loop00.v3
//@execute 0=1
// BUG (wasm target only): comparing two data-type values inside a loop traps
// with UNREACHABLE. Reproduces on -target=wasm via the .bin.wast runner:
//   assert_return expected 1, got trap[UNREACHABLE]
// The same comparison outside a loop is fine, and small iteration counts (8,
// 16, 64) pass while 256 traps -- so it appears to depend on how the loop is
// optimized rather than on the comparison alone. Passes on v3i, jvm and all
// native targets. Not specific to pack/unpack: constructing the values
// directly reproduces it too.
type P(a: u4, b: u4) { }
def up(v: u16) -> P { return u16.unpack<P>(v); }
def main(k: int) -> int {
	for (i < 256) {
		if (up(u16.view(0xAB)) != up(u16.view(0xAB))) return -1;
	}
	return 1;
}
